-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 7, 8, 9, 11, 12
-
Component/s: core-libs
-
b14
-
generic
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8228915 | 12u-cpu | Ivan Gerasimov | P3 | Resolved | Fixed | master |
| JDK-8222312 | 12.0.2 | Ivan Gerasimov | P3 | Resolved | Fixed | b03 |
| JDK-8222698 | 11.0.5-oracle | Ivan Gerasimov | P3 | Resolved | Fixed | b01 |
| JDK-8222875 | 11.0.4 | Ivan Gerasimov | P3 | Resolved | Fixed | b01 |
| JDK-8225701 | openjdk8u232 | Ivan Gerasimov | P3 | Resolved | Fixed | b01 |
| JDK-8223273 | 8u231 | Ivan Gerasimov | P3 | Resolved | Fixed | b01 |
| JDK-8229616 | emb-8u231 | Ivan Gerasimov | P3 | Resolved | Fixed | b01 |
| JDK-8223339 | 7u241 | Ivan Gerasimov | P3 | Resolved | Fixed | b01 |
In getMulticastInterface() after a call to Java_java_net_NetworkInterface_getByInetAddress0() need to check if an exception has been thrown.
- backported by
-
JDK-8222312 JNI exception pending in PlainDatagramSocketImpl.c
-
- Resolved
-
-
JDK-8222698 JNI exception pending in PlainDatagramSocketImpl.c
-
- Resolved
-
-
JDK-8222875 JNI exception pending in PlainDatagramSocketImpl.c
-
- Resolved
-
-
JDK-8223273 JNI exception pending in PlainDatagramSocketImpl.c
-
- Resolved
-
-
JDK-8223339 JNI exception pending in PlainDatagramSocketImpl.c
-
- Resolved
-
-
JDK-8225701 JNI exception pending in PlainDatagramSocketImpl.c
-
- Resolved
-
-
JDK-8228915 JNI exception pending in PlainDatagramSocketImpl.c
-
- Resolved
-
-
JDK-8229616 JNI exception pending in PlainDatagramSocketImpl.c
-
- Resolved
-