8170494: JNI exception pending in PlainDatagramSocketImpl.c

Reviewed-by: clanger, vtewari